[tool.poetry]
name = "quantization-demo"
version = "0.0.1"
description = ""
authors = ["Manos Kirtas <manolis.kirt@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <=3.11.3"
setuptools = "<=68.2.2"
sexpdata = "<=1.0.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "*"
numpy = "^1.26.2"
tabulate = "^0.9.0"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
wandb = "^0.16.0"
h5py = "*"

[tool.poetry.group.remote]
[tool.poetry.group.remote.dependencies]
torch-fquant = {git = "git@github.com:eakirtas/torch_fquant.git", branch = "main"}
# Or use local path
# torch-fquant = {path = '../TorchFQuant', develop = true}


[tool.poetry.group.dev.dependencies]
jedi = "^0.19.1"
json-rpc = "^1.15.0"
service-factory = "^0.1.6"
flake8 = "^6.1.0"
autoflake = "^2.2.1"
autopep8 = "^2.0.4"
pydocstyle = "^6.3.0"
pylint = "^3.0.2"
rope = "^1.11.0"
yapf = "^0.40.2"
future = "^0.18.3"
ipython = "^8.17.2"
jsonrpc = "^3.0.1"
epc = "^0.0.5"
importmagic = "^0.1.7"


[build-system]
requires = ["poetry-core", "setuptools==68.2.2", "sexpdata==1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true